[package]
name = "rotp"
version = "0.1.0"
authors = ["Dan Ho <igaryhe@gmail.com>"]
edition = "2018"

[dependencies]
base32 = "0.4.0"
sha-1 = "0.8.1"
sha2 = "0.8.0"
hmac = "0.7.0"
byteorder = "1.3.1"
time = "0.1.42"
clap = {version = "2.32.0", features = ["yaml"]}
generic-array = "0.12.0"
url = "1.7.2"
failure = "0.1.5"
